--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.1",
+    "@popperjs/core": "^2.11.6",
     "@supabase/supabase-js": "^2.0.0-rc.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
