--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -21,5 +21,12 @@
     "nodemon": "^2.0.19",
     "pg": "^8.8.0",
     "prisma": "^4.3.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.1.2",
+    "superagent": "^8.0.2",
+    "supertest": "^6.2.4"
   }
 }
